Fixing issue with size of images on mobile

--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -73,3 +73,7 @@
 	text-align:center;
 	max-width: 30em;
 }
+
+.responsive {
+    width: 100%;
+}
